--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,7 +137,10 @@
         "any": "cpp",
         "future": "cpp",
         "list": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "span": "cpp",
+        "format": "cpp",
+        "charconv": "cpp"
     },
     "[ini]": {
         "editor.formatOnSave": false
